--- a/Technical Report/Technical Report.ipynb
+++ b/Technical Report/Technical Report.ipynb
@@ -8,14 +8,14 @@
     "Identifying the features that correlation with red, and separately, white, wine quality\n",
     "\n",
     "# Overview\n",
-    "This model will identify the features that can predict wine quality\n",
+    "This model will identify the features that can predict wine quality, specifically to predict high or low quality wine.\n",
     "\n",
     "## When?\n",
     "This contains a linear regression model that will identify the leading features, and how much influence they have, on the quality of high and low quality wine. Because the qualities of red and white wine are different, there will be two models: one for red, and one for white\n",
     "\n",
     "The metric that was determined how successful this model is is the R-squared value, from the OLS model.\n",
     "## Why?\n",
-    "This project is interesting because quality wine can be a highly subjective measurement. If objective, quantitative measurements can be correlated with how the quality will be received, improvements can be made in wine production, marketing, and pricing.\n",
+    "This project is interesting because quality wine can be a highly subjective measurement. If the objective can be met, quantitative measurements can be correlated with how the quality will be received, improvements can be made in wine production, marketing, and pricing.\n",
     "\n",
     "## Who?\n",
     "This project can be interesting to consumers, producers, and distributors of wine. \n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -153,11 +153,11 @@
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x0000011DDE485D90>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x0000011DE0930520>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -309,8 +309,8 @@
       "Dep. Variable:                quality   R-squared:                       0.365\n",
       "Model:                            OLS   Adj. R-squared:                  0.362\n",
       "Method:                 Least Squares   F-statistic:                     121.8\n",
-      "Date:                Sun, 06 Dec 2020   Prob (F-statistic):          1.05e-121\n",
-      "Time:                        13:41:36   Log-Likelihood:                -1256.2\n",
+      "Date:                Mon, 07 Dec 2020   Prob (F-statistic):          1.05e-121\n",
+      "Time:                        22:05:12   Log-Likelihood:                -1256.2\n",
       "No. Observations:                1279   AIC:                             2526.\n",
       "Df Residuals:                    1272   BIC:                             2563.\n",
       "Df Model:                           6                                         \n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -394,8 +394,8 @@
       "Dep. Variable:                quality   R-squared:                       0.287\n",
       "Model:                            OLS   Adj. R-squared:                  0.285\n",
       "Method:                 Least Squares   F-statistic:                     196.3\n",
-      "Date:                Sun, 06 Dec 2020   Prob (F-statistic):          7.33e-280\n",
-      "Time:                        13:41:40   Log-Likelihood:                -4420.9\n",
+      "Date:                Mon, 07 Dec 2020   Prob (F-statistic):          7.33e-280\n",
+      "Time:                        22:05:15   Log-Likelihood:                -4420.9\n",
       "No. Observations:                3918   AIC:                             8860.\n",
       "Df Residuals:                    3909   BIC:                             8916.\n",
       "Df Model:                           8                                         \n",
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -492,8 +492,8 @@
       "Dep. Variable:                quality   R-squared:                       0.570\n",
       "Model:                            OLS   Adj. R-squared:                  0.560\n",
       "Method:                 Least Squares   F-statistic:                     57.77\n",
-      "Date:                Sun, 06 Dec 2020   Prob (F-statistic):           4.35e-38\n",
-      "Time:                        13:41:50   Log-Likelihood:                -299.78\n",
+      "Date:                Mon, 07 Dec 2020   Prob (F-statistic):           4.35e-38\n",
+      "Time:                        22:05:22   Log-Likelihood:                -299.78\n",
       "No. Observations:                 224   AIC:                             611.6\n",
       "Df Residuals:                     218   BIC:                             632.0\n",
       "Df Model:                           5                                         \n",
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -574,8 +574,8 @@
       "Dep. Variable:                quality   R-squared:                       0.416\n",
       "Model:                            OLS   Adj. R-squared:                  0.414\n",
       "Method:                 Least Squares   F-statistic:                     191.5\n",
-      "Date:                Sun, 06 Dec 2020   Prob (F-statistic):          1.01e-244\n",
-      "Time:                        14:01:53   Log-Likelihood:                -2863.3\n",
+      "Date:                Mon, 07 Dec 2020   Prob (F-statistic):          1.01e-244\n",
+      "Time:                        22:05:25   Log-Likelihood:                -2863.3\n",
       "No. Observations:                2160   AIC:                             5745.\n",
       "Df Residuals:                    2151   BIC:                             5796.\n",
       "Df Model:                           8                                         \n",
